lesson/kub_22/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  rules:
    - host: test.ingress.rebrainme.com
      http:
        paths:
          - backend:
              serviceName: svc-internal
              servicePort: 80
